feat: colocando o rabbitmq

--- a/.env-example
+++ b/.env-example
@@ -1,12 +1,26 @@
-
 DATABASE_URL=""
 
+# Postgres
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 POSTGRES_DB=""
 
+# MongoDB
+MONGODB_ROOT_USER=""
+MONGODB_ROOT_PASSWORD=""
+MONGODB_DATABASE=""
+MONGODB_URL=""
+
+# RabbitMQ
+RABBITMQ_USERNAME=""
+RABBITMQ_PASSWORD=""
+RABBITMQ_URL=""
+
+# JSON WEB TOKEN
 JWT_SECRET=""
 
+# API PORT
 PORT=""
 
+# Base URL do frontend
 BASE_URL_WEB=""
