--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/amqplib": "^0.10.7",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.13.13",
     "prisma": "^6.5.0",
@@ -24,6 +25,7 @@
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
     "@prisma/client": "^6.5.0",
+    "amqplib": "^0.10.5",
     "bcrypt": "^5.1.1",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
