feat: adicionando mongo e os métodos pra colocar na fila e os logs

--- a/biome.json
+++ b/biome.json
@@ -26,6 +26,10 @@
       },
       "nursery": {
         "useSortedClasses": "info"
+      },
+      "complexity": {
+        "noStaticOnlyClass": "off",
+        "noThisInStatic": "off"
       }
     }
   },
