--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.1",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
+    "mongodb": "^6.15.0",
     "zod": "^3.24.2"
   },
   "prisma": {
